[gd_scene load_steps=24 format=3 uid="uid://dg5qpa0rgx766"]

[ext_resource type="Script" uid="uid://doakrl6v2tdj4" path="res://Scenes/Player/player.gd" id="1_a3d8c"]
[ext_resource type="Texture2D" uid="uid://crvcmh3pp87wa" path="res://NinjaAssetPack/Ninja Adventure - Asset Pack/Actor/Characters/Caveman/SeparateAnim/Walk.png" id="2_a3d8c"]
[ext_resource type="Texture2D" uid="uid://b72ecmntcmp5r" path="res://NinjaAssetPack/Ninja Adventure - Asset Pack/Items/Scroll/ScrollEmpty.png" id="3_xpcdj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xpcdj"]
atlas = ExtResource("2_a3d8c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtuoh"]
atlas = ExtResource("2_a3d8c")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_htcer"]
atlas = ExtResource("2_a3d8c")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd0ac"]
atlas = ExtResource("2_a3d8c")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u5uq"]
atlas = ExtResource("2_a3d8c")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlvik"]
atlas = ExtResource("2_a3d8c")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk6dx"]
atlas = ExtResource("2_a3d8c")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhyir"]
atlas = ExtResource("2_a3d8c")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_74mp2"]
atlas = ExtResource("2_a3d8c")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oikmp"]
atlas = ExtResource("2_a3d8c")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_06tpx"]
atlas = ExtResource("2_a3d8c")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g0yx"]
atlas = ExtResource("2_a3d8c")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dey5f"]
atlas = ExtResource("2_a3d8c")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5xpd"]
atlas = ExtResource("2_a3d8c")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks1b7"]
atlas = ExtResource("2_a3d8c")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnuln"]
atlas = ExtResource("2_a3d8c")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_aqm4k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpcdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtuoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htcer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd0ac")
}],
"loop": true,
"name": &"move_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u5uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlvik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk6dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhyir")
}],
"loop": true,
"name": &"move_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_74mp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oikmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06tpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g0yx")
}],
"loop": true,
"name": &"move_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dey5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5xpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks1b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnuln")
}],
"loop": true,
"name": &"move_up",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a3d8c"]
radius = 5.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a3d8c"]
size = Vector2(8, 8)

[sub_resource type="LabelSettings" id="LabelSettings_a3d8c"]
font_size = 40

[node name="player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_a3d8c")
move_speed = null
push_strength = 150.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_aqm4k")
animation = &"move_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_a3d8c")

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_a3d8c")
debug_color = Color(0.9136442, 8.836806e-05, 0.7208244, 0.41960785)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 32.0
offset_top = 27.0
offset_right = 205.0
offset_bottom = 104.0

[node name="TreasureLabel" type="Label" parent="CanvasLayer/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 15.0
offset_top = 11.0
offset_right = 77.0
offset_bottom = 69.0
text = "00"
label_settings = SubResource("LabelSettings_a3d8c")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 75.0
offset_right = 162.26666
offset_bottom = 77.0
texture = ExtResource("3_xpcdj")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
